    False.

        import pyparsing as pp
        pp.__diag__.enable("warn_multiple_tokens_in_named_alternation")

  - __diag__.enable_all_warnings() is another helper that sets
    all "warn*" diagnostics to True.

        pp.__diag__.enable_all_warnings()

- New namespace, assert methods and classes added to support writing unit tests.
  (MORE TBD)

- Fixed handling of ParseSyntaxExceptions raised as part of Each
  expressions, when sub-expressions contain '-' backtrack
  suppression. As part of resolution to a question posted by John
  Greene on StackOverflow.

- Potentially *huge* performance enhancement when parsing Word
  expressions built from pyparsing_unicode character sets. Word now
  internally converts ranges of consecutive characters to regex
  character ranges (converting "0123456789" to "0-9" for instance),
  resulting in as much as 50X improvement in performance! Work
  inspired by a question posted by Midnighter on StackOverflow.

- Fixed bug in CloseMatch where end location was incorrectly
  computed; and updated partial_gene_match.py example.

- Fixed bug in indentedBlock with a parser using two different
  types of nested indented blocks with different indent values,
  but sharing the same indent stack, submitted by renzbagaporo.

- BigQueryViewParser.py added to examples directory, PR submitted
  by Michael Smedberg, nice work!

- booleansearchparser.py added to examples directory, PR submitted
  by xecgr. Builds on searchparser.py, adding support for '*'
  wildcards and non-Western alphabets.


Version 2.4.2 - July, 2019
--------------------------
- Updated the shorthand notation that has been added for repetition
  expressions: expr[min, max], with '...' valid as a min or max value:
     - expr[...] and expr[0, ...] are equivalent to ZeroOrMore(expr)
     - expr[1, ...] is equivalent to OneOrMore(expr)
     - expr[n, ...] or expr[n,] is equivalent
          to expr*n + ZeroOrMore(expr)
          (read as "n or more instances of expr")