@@ -74,7 +74,11 @@ Version 3.0.0a1
         pp.__diag__.enable_all_warnings()
 
 - New namespace, assert methods and classes added to support writing unit tests.
-  (MORE TBD)
+  - assertParseResultsEquals
+  - assertParseAndCheckList
+  - assertParseAndCheckDict
+  - assertRunTestResults
+  - assertRaisesParseException
 
 - Fixed handling of ParseSyntaxExceptions raised as part of Each
   expressions, when sub-expressions contain '-' backtrack
